--- a/training.cfg
+++ b/training.cfg
@@ -1,21 +1,59 @@
-sv_cheats 1
-sv_infinite_ammo 1
-sv_showimpacts 1
-sv_grenade_trajectory 1
-sv_grenade_trajectory_thickness 0.5
-ammo_grenade_limit_default 1
-ammo_grenade_limit_flashbang 1
-ammo_grenade_limit_total 5
-bot_kick all
-mp_warmuptime 1
-mp_freezetime 1
-mp_roundtime 60
-mp_roundtime_defuse 60
-mp_roundtime_hostage 60
-mp_buy_anywhere 1
-mp_buytime 16000
-mp_maxmoney 16000
-mp_startmoney 16000
-mp_afterroundmoney 16000
-mp_restartgame 1
+// General
+sv_cheats "1"
+sv_infinite_ammo "0"
+
+// Teleportation
+alias "save_position" "writeip; con_logfile cfg/banned_ip.cfg; getpos_exact; con_logfile ."
+alias "load_position" "exec banned_ip"
+alias "1st_person" "cam_command 2"
+alias "3rd_person" "cam_command 1"
+
+// Binds
+bind "F5" "mp_restartgame 1"
+bind "F6" "save_position"
+bind "F7" "load_position"
+bind "F8" "toggle sv_infinite_ammo"
+bind "F9" "3rd_person"
+bind "F10" "disconnect"
+bind "F11" "1st_person"
+bind "," "bot_add_ct"
+bind "." "bot_add_t"
+bind "/" "bot_add"
+
+// Bots
+bot_kick
+mp_autoteambalance "0"
+mp_limitteams "20"
+
+// Impacts and trajectory
+sv_showimpacts "1"
+sv_grenade_trajectory "1"
+sv_grenade_trajectory_thickness "0.5"
+
+// Grenades
+ammo_grenade_limit_default "1"
+ammo_grenade_limit_flashbang "1"
+ammo_grenade_limit_total "5"
+
+// Times
+mp_warmuptime "1"
+mp_freezetime "1"
+mp_respawntime "1"
+mp_bonusroundtime "1"
+mp_roundtime "60"
+mp_roundtime_defuse "60"
+mp_roundtime_hostage "60"
+
+// Buy
+mp_buy_anywhere "1"
+mp_buytime "3600"
+mp_maxmoney "32000"
+mp_startmoney "32000"
+mp_afterroundmoney "32000"
+
+// Misc
+cam_idealdist "150"
+
+// Restart
+mp_restartgame "1"
 mp_warmup_end
