--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,11 @@
+////
+// autoexec.cfg by Bacowy
+////
+
+////
 // Rates
-// rate "786432"
-rate "375000"
+////
+rate "128000"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -9,14 +14,19 @@ cl_interpolate "1"
 cl_lagcompensation "1"
 net_client_steamdatagram_enable_override "1"
 
+////
 // Audio
+////
 volume "0.6"
+snd_musicvolume "0.05"
+snd_deathcamera_volume "0.5"
+snd_tensecondwarning_volume "0.3"
+snd_menumusic_volume "0.5"
+snd_mapobjective_volume "0.5"
 voice_enable "1"
 voice_scale "1"
 voice_mixer_volume "1"
 windows_speaker_config "1"
-snd_musicvolume "0"
-snd_tensecondwarning_volume "0.30"
 snd_mvp_volume "0"
 snd_mix_async "1"
 snd_mixahead "0.025"
@@ -27,103 +37,300 @@ snd_rear_headphone_position "90"
 snd_headphone_pan_exponent "1.2"
 snd_headphone_pan_radial_weight "1"
 dsp_enhance_stereo "0"
+dsp_slow_cpu "0"
 lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
 snd_async_flush
 
+////
 // Video
+////
 mat_monitorgamma "2.3"
-fps_max "120"
-fps_max_menu "90"
+fps_max "150"
+fps_max_menu "75"
 r_dynamic "0"
 r_drawtracers_firstperson "0"
 r_drawparticles "0"
 engine_no_focus_sleep "0"
+func_break_max_pieces "0"
 mat_savechanges
 
+////
 // Mouse
-sensitivity "0.92"
+////
+sensitivity "1.85" // "0.92"
 zoom_sensitivity_ratio_mouse "1.05"
 m_rawinput "1"
 m_customaccel "0"
+m_customaccel_exponent "1"
+m_customaccel_max "0"
+m_customaccel_scale "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
 m_mousespeed "0"
 
+////
 // HUD
-hud_scaling "0.7"
-cl_autowepswitch "0"
-cl_show_team_equipment "1"
-cl_use_opens_buymenu "0"
+////
 
-// Crosshair
-cl_bob_lower_amt "0"
-cl_bobamt_lat "0"
-cl_bobamt_vert "0"
-cl_bobcycle "2"
+//// General
+cl_hud_background_alpha "0.5"
+cl_hud_bomb_under_radar "0"
+cl_hud_color "6"
+cl_hud_healthammo_style "1"
+cl_hud_playercount_pos "1"
+cl_hud_playercount_showcount "1"
+cl_hud_radar_scale "0.9"
+hud_scaling "0.85"
+hud_showtargetid "1"
+hud_takesshots "1"
+
+//// POV
+viewmodel_presetpos "4" // "1"
+viewmodel_fov "65"
+viewmodel_offset_x "2"
+viewmodel_offset_y "2"
+viewmodel_offset_z "-2"
+cl_viewmodel_shift_left_amt "0.5"
+cl_viewmodel_shift_right_amt "0.25"
+cl_bobcycle "0.98"
+cl_bob_lower_amt "0.5"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
+
+//// Radar
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.6"
+cl_radar_rotate "1"
+cl_radar_scale "0.6"
+cl_radar_square_with_scoreboard "0"
+
+//// Misc
+cl_use_opens_buy_menu "0"
+closeonbuy "1"
+cl_showloadout "1"
+cl_show_team_equipment "1"
+cl_teamid_overhead_always "1"
+cl_teammate_colors_show "0"
+cl_autowepswitch "0"
+cl_disablefreezecam "1"
+
+//// Crosshair
 cl_crosshairalpha "200"
 cl_crosshaircolor "5"
+cl_crosshaircolor_r "250"
+cl_crosshaircolor_g "50"
 cl_crosshaircolor_b "50"
-cl_crosshaircolor_r "50"
-cl_crosshaircolor_g "250"
-cl_crosshairdot "1"
-cl_crosshairgap "1"
-cl_crosshairscale "0"
-cl_crosshairsize "3"
-cl_crosshairstyle "4"
-cl_crosshairthickness "1"
+cl_crosshairdot "0"
+cl_crosshairgap "-2"
+cl_crosshairsize "4"
+cl_crosshairstyle "4" // "2"
 cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "1"
-cl_crosshair_outlinethickness "0"
-cl_crosshair_drawoutline "0"
+cl_crosshairthickness "1"
+cl_fixedcrosshairgap "-2"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_drawoutline "1"
 cl_crosshair_t "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "7"
+// cl_crosshair_dynamic_splitdist "7"
+// cl_crosshair_dynamic_maxdist_splitratio "0.35"
+// cl_crosshair_dynamic_splitalpha_innermod "1"
+// cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 
-// Radar
-cl_radar_always_centered "1"
-cl_radar_rotate "1"
-cl_radar_scale "0.6"
-
+////
 // Aliases
-alias "+ctrl" "+duck; bind G drop_bomb"
-alias "-ctrl" "-duck; bind G drop"
-alias "+double_switch" "lastinv"
-alias "-double_switch" "lastinv"
+////
+
+//// Broken score table fix
+alias "fix_showscores" "mat_setvideomode 1600 1200 1; mat_setvideomode 1600 1200 0"
+
+//// General
+alias "buy_armor" "buy vesthelm; buy vest"
+alias "buy_rifle" "buy ak47; buy m4a1"
+alias "buy_grenades_2flash" "buy flashbang; buy flashbang; buy incgrenade; buy molotov; buy smokegrenade"
+alias "buy_grenades_each" "buy flashbang; buy hegrenade; buy incgrenade; buy molotov; buy smokegrenade"
+alias "buy_grenades_eco" "buy flashbang; buy hegrenade"
 alias "drop_bomb" "use weapon_c4; drop"
+alias "use_weapon_decoy" "use weapon_decoy"
+alias "volume_up" "incrementvar volume 0 1 0.1"
+alias "volume_down" "incrementvar volume 0 1 -0.1"
+
+//// Radar aliases
+alias "radar_regular" "cl_radar_always_centered 1; cl_radar_rotate 1"
+alias "radar_static" "cl_radar_always_centered 0; cl_radar_rotate 0"
+alias "radar_scale_regular" "cl_radar_scale 0.6; cl_hud_radar_scale 0.9"
+alias "radar_scale_map" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
+alias "radar_scale_instructor" "cl_radar_scale 0.8; cl_hud_radar_scale 1.1"
+alias "+radar_scale" "+use; radar_static; radar_scale_map"
+alias "-radar_scale" "-use; radar_regular; radar_scale_regular"
+alias "radar_hide" "cl_drawhud_force_radar 0; alias toggleradar radar_show"
+alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
+alias "toggleradar" "radar_hide"
+
+//// CTRL+G to drop bomb, clear blood when crouching
+alias "+ctrl" "+duck; bind G drop_bomb; r_cleardecals"
+alias "-ctrl" "-duck; bind G drop; r_cleardecals"
+
+//// ALT+C to toggle radar & player ping on ALT key press
+alias "+alt" "player_ping; bind C toggleradar"
+alias "-alt" "bind C +radar_scale"
+
+//// SHIFT+T to use decoy & increase volume when walking
+alias "+shift" "+speed; bind T use_weapon_decoy; volume_up"
+alias "-shift" "-speed; bind T +spray_menu; volume_down"
+
+//// Use instructor while holding E key
+alias "+use_instructor" "+use; radar_regular; radar_scale_instructor; gameinstructor_enable 1"
+alias "-use_instructor" "-use; radar_regular; radar_scale_regular; gameinstructor_enable 0"
+
+//// Jump and throw
 alias "+jumpthrow" "+jump; -attack"
 alias "-jumpthrow" "-jump"
-alias "+scores_net_graph" "+showscores; net_graph 1"
-alias "-scores_net_graph" "-showscores; net_graph 0"
-alias "+shift" "+speed; incrementvar volume 0 1 0.1; bind T +spray_menu"
-alias "-shift" "-speed; incrementvar volume 0 1 -0.1; bind T +radar_scale"
-alias "+radar_scale" "+use; cl_radar_always_centered 0; cl_radar_rotate 0; cl_radar_scale 0.3"
-alias "-radar_scale" "-use; cl_radar_always_centered 1; cl_radar_rotate 1; cl_radar_scale 0.6"
 
+//// Jump and crouch
+alias "+jumpduck" "+jump; +duck"
+alias "-jumpduck" "-jump; -duck"
+
+//// Show netgrap with scores
+alias "+show_scores" "+showscores; net_graph 1"
+alias "-show_scores" "-showscores; net_graph 0"
+
+//// Toggle noclip aliases
+alias "togglenoclip0" "noclip 0; alias togglenoclip togglenoclip1"
+alias "togglenoclip1" "noclip 1; alias togglenoclip togglenoclip0"
+alias "togglenoclip" "togglenoclip1"
+
+//// Random grenades aliases
+alias "grenade_set1" "buy_grenades_2flash; alias buy_random_grenades grenade_set2"
+alias "grenade_set2" "buy_grenades_each; alias buy_random_grenades grenade_set1"
+alias "buy_random_grenades" "grenade_set1"
+
+////
 // Binds
-bind "E" "+use; toggle gameinstructor_enable"
-bind "Q" "+double_switch"
-bind "R" "+reload"
-bind "N" "+radar_scale"
-bind "TAB" "+scores_net_graph"
-bind "SHIFT" "+shift"
-bind "CTRL" "+ctrl"
+////
 
-bind "F1" "toggle noclip"
-bind "F2" "toggle voice_enable"
-
-bind "MOUSE3" "+jumpthrow"
+//// Mouse keys
+bind "MOUSE1" "+attack"
+bind "MOUSE2" "+attack2; r_cleardecals"
+bind "MOUSE3" "+jumpduck"
+bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade"
+bind "MOUSE5" "use weapon_flashbang"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
-// Show damage given on screen
+//// Function keys
+bind "ESCAPE" "cancelselect"
+bind "`" "toggleconsole"
+bind "TAB" "+show_scores"
+bind "CAPSLOCK" "toggle voice_enable" // ?
+bind "SHIFT" "+shift"
+bind "CTRL" "+ctrl"
+bind "ALT" "+alt"
+bind "SPACE" "+jump"
+
+//// Upper function keys
+bind "F1" "togglenoclip"
+bind "F2" "demoui"
+bind "F3" "autobuy"
+bind "F4" "rebuy"
+bind "F5" "disconnect"
+bind "F6" "save quick"
+bind "F7" "load quick"
+bind "F8" "fix_showscores" // ?
+bind "F9" "ignorerad" // ?
+bind "F10" "quit prompt"
+bind "F11" "mute"
+bind "F12" "jpeg"
+
+//// Middle function keys
+bind "PAUSE" "pause"
+bind "INS" "buy deagle"
+bind "HOME" "buy fiveseven; buy tec9"
+bind "PGUP" "buy p250"
+bind "DEL" "buy_grenades_2flash"
+bind "END" "buy_grenades_each"
+bind "PGDN" "buy_grenades_eco"
+
+//// Numeric keys
+bind "1" "slot1"
+bind "2" "slot2"
+bind "3" "slot3"
+bind "4" "use weapon_hegrenade"
+bind "5" "slot5"
+
+//// Movement keys
+bind "W" "+forward"
+bind "S" "+back"
+bind "A" "+moveleft"
+bind "D" "+moveright"
+
+//// 1st row (QWERTY) keys
+bind "Q" "toggle cl_righthand"
+bind "E" "+use_instructor"
+bind "R" "+reload"
+bind "T" "+spray_menu"
+bind "Y" "messagemode"
+bind "U" "messagemode2"
+bind "I" "show_loadout_toggle"
+bind "[" "invprev"
+bind "]" "invnext"
+bind "\" "lastinv"
+
+//// 2nd row (FGHJKL) keys
+bind "F" "+lookatweapon"
+bind "G" "drop"
+bind "H" "buy_armor; buy_rifle; buy_random_grenades; buy defuser" // Rifle buy
+bind "J" "buy_armor; buy awp; buy_random_grenades; buy defuser" // AWP buy
+bind "K" "radio"
+bind "L" "buy p250; buy_grenades_eco" // Eco buy
+
+//// 3rd row (ZXCVBN) keys
+bind "Z" "use weapon_smokegrenade"
+bind "X" "+jumpthrow"
+bind "C" "+radar_scale"
+bind "V" "+voicerecord"
+bind "B" "buymenu"
+bind "N" "buy vest; buy deagle; buy_grenades_eco" // Half buy
+bind "M" "teammenu"
+bind "," "buyammo1"
+bind "." "buyammo2"
+
+//// Numeric keyboard keys
+bind "KP_END" "buy m4a1; buy ak47" // 1
+bind "KP_DOWNARROW" "buy famas; buy galilar" // 2
+bind "KP_PGDN" "buy ump45" // 3
+bind "KP_LEFTARROW" "buy awp" // 4
+bind "KP_5" "buy ssg08" // 5
+bind "KP_RIGHTARROW" "buy sg556; buy aug" // 6
+bind "KP_HOME" "buy mac10; buy mp9" // 7
+bind "KP_UPARROW" "buy p90" // 8
+bind "KP_PGUP" "buy xm1014" // 9
+bind "KP_INS" "buy defuser" // 0
+bind "KP_DEL" "buy taser" // Dot
+bind "KP_ENTER" "buy_armor" // Enter
+bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
+bind "KP_SLASH" "buy negev" // Slash
+bind "KP_PLUS" "volume_up" // Plus
+bind "KP_MINUS" "volume_down" // Minus
+
+//// Misc
+net_graph "0"
+net_graphpos "2"
+net_graphproportionalfont "1"
+net_graphheight "256"
 developer "1"
+con_enable "1"
 con_filter_enable "2"
 con_filter_text_out "Player:"
 con_filter_text "Damage Given"
+ui_steam_overlay_notification_position "bottomright"
+player_nevershow_communityservermessage "1"
+mm_dedicated_search_maxping "100"
+cl_downloadfilter "all"
+cl_disablehtmlmotd "1"
+cl_showfps "0"
+cam_idealyaw "100"
 
+//// Write config
 host_writeconfig
