--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -164,17 +164,10 @@ alias "radar_scale_map" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
 alias "radar_scale_instructor" "cl_radar_scale 0.8; cl_hud_radar_scale 1.1"
 alias "+radar_scale" "+use; radar_static; radar_scale_map"
 alias "-radar_scale" "-use; radar_regular; radar_scale_regular"
-alias "radar_hide" "cl_drawhud_force_radar 0; alias toggleradar radar_show"
-alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
-alias "toggleradar" "radar_hide"
 
 //// CTRL+G to drop bomb, clear blood when crouching
 alias "+ctrl" "+duck; bind G drop_bomb; r_cleardecals"
 alias "-ctrl" "-duck; bind G drop; r_cleardecals"
-
-//// ALT+C to toggle radar & player ping on ALT key press
-alias "+alt" "player_ping; bind C toggleradar"
-alias "-alt" "bind C +radar_scale"
 
 //// SHIFT+T to use decoy & increase volume when walking
 alias "+shift" "+speed; bind T use_weapon_decoy; volume_up"
@@ -226,7 +219,7 @@ bind "TAB" "+show_scores"
 bind "CAPSLOCK" "toggle voice_enable" // ?
 bind "SHIFT" "+shift"
 bind "CTRL" "+ctrl"
-bind "ALT" "+alt"
+bind "ALT" "player_ping"
 bind "SPACE" "+jump"
 
 //// Upper function keys
