--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,5 @@
 ////
-// autoexec.cfg by Bacowy
+// autoexec.cfg by Ba(c)sowy
 ////
 
 ////
@@ -58,7 +58,7 @@ mat_savechanges
 ////
 // Mouse
 ////
-sensitivity "1.85" // "0.92"
+sensitivity "1.85" // "0.92" ?
 zoom_sensitivity_ratio_mouse "1.05"
 m_rawinput "1"
 m_customaccel "0"
@@ -86,7 +86,7 @@ hud_showtargetid "1"
 hud_takesshots "1"
 
 //// POV
-viewmodel_presetpos "4" // "1"
+viewmodel_presetpos "4" // "1" ?
 viewmodel_fov "65"
 viewmodel_offset_x "2"
 viewmodel_offset_y "2"
@@ -122,20 +122,20 @@ cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "50"
 cl_crosshaircolor_b "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-2"
-cl_crosshairsize "4"
-cl_crosshairstyle "4" // "2"
+cl_crosshairgap "-3"
+cl_crosshairsize "2"
+cl_crosshairstyle "4" // "2" ?
 cl_crosshairusealpha "1"
-cl_crosshairthickness "1"
+cl_crosshairthickness "0.5"
 cl_fixedcrosshairgap "-2"
 cl_crosshair_outlinethickness "1"
-cl_crosshair_drawoutline "1"
+cl_crosshair_drawoutline "0"
 cl_crosshair_t "0"
-// cl_crosshair_dynamic_splitdist "7"
-// cl_crosshair_dynamic_maxdist_splitratio "0.35"
-// cl_crosshair_dynamic_splitalpha_innermod "1"
-// cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
+// cl_crosshair_dynamic_splitdist "7" ?
+// cl_crosshair_dynamic_maxdist_splitratio "0.35" ?
+// cl_crosshair_dynamic_splitalpha_innermod "1" ?
+// cl_crosshair_dynamic_splitalpha_outermod "0.5" ?
+cl_crosshair_sniper_show_normal_inaccuracy "0" ?
 cl_crosshair_sniper_width "1"
 
 ////
@@ -153,8 +153,23 @@ alias "buy_grenades_each" "buy flashbang; buy hegrenade; buy incgrenade; buy mol
 alias "buy_grenades_eco" "buy flashbang; buy hegrenade"
 alias "drop_bomb" "use weapon_c4; drop"
 alias "use_weapon_decoy" "use weapon_decoy"
-alias "volume_up" "incrementvar volume 0 1 0.1"
-alias "volume_down" "incrementvar volume 0 1 -0.1"
+
+//// Volume aliases
+alias "+volume_up" "con_filter_enable 0"
+alias "+volume_down" "con_filter_enable 0"
+alias "-volume_up" "volume_set_5"
+alias "-volume_down" "volume_set_7"
+alias "volume_set_0" "echo [--------------------] Volume:   0%; con_filter_enable 2; alias -volume_up volume_set_1; volume 0.0"
+alias "volume_set_1" "echo [##------------------] Volume:  10%; con_filter_enable 2; alias -volume_down volume_set_0; alias -volume_up volume_set_2; volume 0.1"
+alias "volume_set_2" "echo [####----------------] Volume:  20%; con_filter_enable 2; alias -volume_down volume_set_1; alias -volume_up volume_set_3; volume 0.2"
+alias "volume_set_3" "echo [######--------------] Volume:  30%; con_filter_enable 2; alias -volume_down volume_set_2; alias -volume_up volume_set_4; volume 0.3"
+alias "volume_set_4" "echo [########------------] Volume:  40%; con_filter_enable 2; alias -volume_down volume_set_3; alias -volume_up volume_set_5; volume 0.4"
+alias "volume_set_5" "echo [##########----------] Volume:  50%; con_filter_enable 2; alias -volume_down volume_set_4; alias -volume_up volume_set_6; volume 0.5"
+alias "volume_set_6" "echo [############--------] Volume:  60%; con_filter_enable 2; alias -volume_down volume_set_5; alias -volume_up volume_set_7; volume 0.6"
+alias "volume_set_7" "echo [##############------] Volume:  70%; con_filter_enable 2; alias -volume_down volume_set_6; alias -volume_up volume_set_8; volume 0.7"
+alias "volume_set_8" "echo [################----] Volume:  80%; con_filter_enable 2; alias -volume_down volume_set_7; alias -volume_up volume_set_9; volume 0.8"
+alias "volume_set_9" "echo [##################--] Volume:  90%; con_filter_enable 2; alias -volume_down volume_set_8; alias -volume_up volume_set_m; volume 0.9"
+alias "volume_set_m" "echo [####################] Volume: 100%; con_filter_enable 2; alias -volume_down volume_set_9; volume 1.0"
 
 //// Radar aliases
 alias "radar_regular" "cl_radar_always_centered 1; cl_radar_rotate 1"
@@ -164,10 +179,17 @@ alias "radar_scale_map" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
 alias "radar_scale_instructor" "cl_radar_scale 0.8; cl_hud_radar_scale 1.1"
 alias "+radar_scale" "+use; radar_static; radar_scale_map"
 alias "-radar_scale" "-use; radar_regular; radar_scale_regular"
+alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
+alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
+alias "toggleradar" "radar_hide"
 
 //// CTRL+G to drop bomb, clear blood when crouching
 alias "+ctrl" "+duck; bind G drop_bomb; r_cleardecals"
 alias "-ctrl" "-duck; bind G drop; r_cleardecals"
+
+//// ALT+C to toggle radar & player ping on ALT key press
+alias "+alt" "player_ping; bind C toggleradar"
+alias "-alt" "bind C +radar_scale"
 
 //// SHIFT+T to use decoy & increase volume when walking
 alias "+shift" "+speed; bind T use_weapon_decoy; volume_up"
@@ -188,11 +210,6 @@ alias "-jumpduck" "-jump; -duck"
 //// Show netgrap with scores
 alias "+show_scores" "+showscores; net_graph 1"
 alias "-show_scores" "-showscores; net_graph 0"
-
-//// Toggle noclip aliases
-alias "togglenoclip0" "noclip 0; alias togglenoclip togglenoclip1"
-alias "togglenoclip1" "noclip 1; alias togglenoclip togglenoclip0"
-alias "togglenoclip" "togglenoclip1"
 
 //// Random grenades aliases
 alias "grenade_set1" "buy_grenades_2flash; alias buy_random_grenades grenade_set2"
@@ -216,14 +233,14 @@ bind "MWHEELDOWN" "+jump"
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
 bind "TAB" "+show_scores"
-bind "CAPSLOCK" "toggle voice_enable" // ?
+bind "CAPSLOCK" "toggle voice_enable" // ? TODO: Console output
 bind "SHIFT" "+shift"
 bind "CTRL" "+ctrl"
-bind "ALT" "player_ping"
+bind "ALT" "+alt"
 bind "SPACE" "+jump"
 
 //// Upper function keys
-bind "F1" "togglenoclip"
+// bind "F1" "" ?
 bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
@@ -233,8 +250,8 @@ bind "F7" "load quick"
 bind "F8" "fix_showscores" // ?
 bind "F9" "ignorerad" // ?
 bind "F10" "quit prompt"
-bind "F11" "mute"
-bind "F12" "jpeg"
+bind "F11" "mute" // ?
+bind "F12" "jpeg" // ?
 
 //// Middle function keys
 bind "PAUSE" "pause"
@@ -275,7 +292,7 @@ bind "F" "+lookatweapon"
 bind "G" "drop"
 bind "H" "buy_armor; buy_rifle; buy_random_grenades; buy defuser" // Rifle buy
 bind "J" "buy_armor; buy awp; buy_random_grenades; buy defuser" // AWP buy
-bind "K" "radio"
+bind "K" "radio1"
 bind "L" "buy p250; buy_grenades_eco" // Eco buy
 
 //// 3rd row (ZXCVBN) keys
@@ -288,6 +305,12 @@ bind "N" "buy vest; buy deagle; buy_grenades_eco" // Half buy
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
+
+// Arrow keys
+bind "UPARROW" "enemyspot"
+bind "DOWNARROW" "sectorclear"
+bind "RIGHTARROW" "roger"
+bind "LEFTARROW" "negative"
 
 //// Numeric keyboard keys
 bind "KP_END" "buy m4a1; buy ak47" // 1
@@ -304,14 +327,17 @@ bind "KP_DEL" "buy taser" // Dot
 bind "KP_ENTER" "buy_armor" // Enter
 bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
 bind "KP_SLASH" "buy negev" // Slash
-bind "KP_PLUS" "volume_up" // Plus
-bind "KP_MINUS" "volume_down" // Minus
+bind "KP_PLUS" "+volume_up" // Plus
+bind "KP_MINUS" "+volume_down" // Minus
 
-//// Misc
+////
+// Misc
+////
 net_graph "0"
 net_graphpos "2"
 net_graphproportionalfont "1"
 net_graphheight "256"
+ent_absbox "player"
 developer "1"
 con_enable "1"
 con_filter_enable "2"
@@ -323,7 +349,8 @@ mm_dedicated_search_maxping "100"
 cl_downloadfilter "all"
 cl_disablehtmlmotd "1"
 cl_showfps "0"
-cam_idealyaw "100"
 
-//// Write config
+////
+// Write config
+////
 host_writeconfig
