--- a/training.cfg
+++ b/training.cfg
@@ -1,48 +1,72 @@
-// General
-sv_cheats "1"
-sv_infinite_ammo "0"
+////
+// autoexec.cfg by Ba(c)sowy
+////
 
-// Teleportation
-alias "save_position" "writeip; con_logfile cfg/banned_ip.cfg; getpos_exact; con_logfile ."
-alias "load_position" "exec banned_ip"
-alias "1st_person" "cam_command 2"
-alias "3rd_person" "cam_command 1"
+// General
+writeip
+sv_cheats "1"
+sv_infinite_ammo "2"
+game_type "0"
+game_mode "1"
+
+// Teleportation aliases
+alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
+alias "load_position" "exec banned_ip.log; togglenoclip0; play ui\csgo_ui_page_scroll.wav"
+
+// Toggle noclip aliases
+alias "togglenoclip0" "noclip 0; alias togglenoclip togglenoclip1"
+alias "togglenoclip1" "noclip 1; alias togglenoclip togglenoclip0"
+alias "togglenoclip" "togglenoclip1"
+
+// Toggle camera aliases
+alias "togglecam1" "cam_command 1; alias togglecam togglecam2"
+alias "togglecam2" "cam_command 2; alias togglecam togglecam1"
+alias "togglecam" "togglecam1"
 
 // Binds
+bind "F1" "togglenoclip"
+bind "F2" "bot_place"
+bind "F3" "toggle bot_crouch"
+bind "F4" "toggle bot_mimic"
 bind "F5" "mp_restartgame 1"
 bind "F6" "save_position"
 bind "F7" "load_position"
-bind "F8" "toggle sv_infinite_ammo"
-bind "F9" "3rd_person"
+bind "F8" "toggle sv_infinite_ammo 0 2"
+bind "F9" "toggle r_drawothermodels 2 1"
 bind "F10" "disconnect"
-bind "F11" "1st_person"
-bind "," "bot_add_ct"
-bind "." "bot_add_t"
+bind "F11" "togglecam"
+bind "F12" "toggle host_timescale 10 1"
+bind "," "bot_add_t"
+bind "." "bot_add_ct"
 bind "/" "bot_add"
+bind "'" "bot_quota 10"
 
 // Bots
+gods
 bot_kick
+bot_stop "1"
+bot_dont_shoot "1"
+bot_knives_only
+bot_difficulty "expert"
+mp_solid_teammates "1"
+mp_friendlyfire "1"
 mp_autoteambalance "0"
 mp_limitteams "20"
-
-// Impacts and trajectory
-sv_showimpacts "1"
-sv_grenade_trajectory "1"
-sv_grenade_trajectory_thickness "0.5"
-
-// Grenades
-ammo_grenade_limit_default "1"
-ammo_grenade_limit_flashbang "1"
-ammo_grenade_limit_total "5"
 
 // Times
 mp_warmuptime "1"
 mp_freezetime "1"
 mp_respawntime "1"
 mp_bonusroundtime "1"
+mp_respawn_on_death_ct "1"
+mp_respawn_on_death_t "1"
+mp_round_restart_delay "1"
+mp_halftime_duration "1"
+mp_c4timer "10"
 mp_roundtime "60"
 mp_roundtime_defuse "60"
 mp_roundtime_hostage "60"
+mp_endmatch_votenextmap "0"
 
 // Buy
 mp_buy_anywhere "1"
@@ -51,8 +75,22 @@ mp_maxmoney "32000"
 mp_startmoney "32000"
 mp_afterroundmoney "32000"
 
+// Impacts and trajectory
+sv_showimpacts "1"
+sv_showimpacts_time "3"
+sv_grenade_trajectory "1"
+sv_grenade_trajectory_time "10"
+sv_grenade_trajectory_thickness "0.5"
+
+// Grenades
+ammo_grenade_limit_default "1"
+ammo_grenade_limit_flashbang "1"
+ammo_grenade_limit_total "5"
+
 // Misc
-cam_idealdist "150"
+cam_idealdist "120"
+cam_idealyaw "0"
+cl_showpos "1"
 
 // Restart
 mp_restartgame "1"
