--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -58,7 +58,7 @@ mat_savechanges
 ////
 // Mouse
 ////
-sensitivity "1.85" // "0.92" ?
+sensitivity "2.25"
 zoom_sensitivity_ratio_mouse "1.05"
 m_rawinput "1"
 m_customaccel "0"
