--- a/training.cfg
+++ b/training.cfg
@@ -48,6 +48,7 @@ bot_stop "1"
 bot_dont_shoot "1"
 bot_knives_only
 bot_difficulty "expert"
+mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3" // ?
 mp_solid_teammates "1"
 mp_friendlyfire "1"
 mp_autoteambalance "0"
