--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,12 +17,12 @@ net_client_steamdatagram_enable_override "1"
 ////
 // Audio
 ////
-volume "0.6"
-snd_musicvolume "0.05"
-snd_deathcamera_volume "0.5"
-snd_tensecondwarning_volume "0.3"
-snd_menumusic_volume "0.5"
-snd_mapobjective_volume "0.5"
+volume "0.5"
+snd_musicvolume "0.2" // ?
+snd_deathcamera_volume "0.2" // ?
+snd_tensecondwarning_volume "0.2" // ?
+snd_menumusic_volume "0.2" // ?
+snd_mapobjective_volume "0.2" // ?
 voice_enable "1"
 voice_scale "1"
 voice_mixer_volume "1"
@@ -171,14 +171,17 @@ alias "volume_set_8" "echo [################----] Volume:  80%; con_filter_enabl
 alias "volume_set_9" "echo [##################--] Volume:  90%; con_filter_enable 2; alias -volume_down volume_set_8; alias -volume_up volume_set_m; volume 0.9"
 alias "volume_set_m" "echo [####################] Volume: 100%; con_filter_enable 2; alias -volume_down volume_set_9; volume 1.0"
 
+//// Mute aliases
+alias "+mute_players" "con_filter_enable 0"
+alias "-mute_players" "voice_off"
+alias "voice_off" "echo [!] VoIP turned OFF [!]; con_filter_enable 2; alias -mute_players voice_on; voice_enable 0"
+alias "voice_on" "echo [!] VoIP turned ON [!]; con_filter_enable 2; alias -mute_players voice_off; voice_enable 1"
+
 //// Radar aliases
-alias "radar_regular" "cl_radar_always_centered 1; cl_radar_rotate 1"
-alias "radar_static" "cl_radar_always_centered 0; cl_radar_rotate 0"
-alias "radar_scale_regular" "cl_radar_scale 0.6; cl_hud_radar_scale 0.9"
-alias "radar_scale_map" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
-alias "radar_scale_instructor" "cl_radar_scale 0.8; cl_hud_radar_scale 1.1"
-alias "+radar_scale" "+use; radar_static; radar_scale_map"
-alias "-radar_scale" "-use; radar_regular; radar_scale_regular"
+alias "radar_scale_normal" "cl_radar_scale 0.6; cl_hud_radar_scale 0.9"
+alias "radar_scale_big" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
+alias "+radar_scale" "+use; radar_scale_big"
+alias "-radar_scale" "-use; radar_scale_normal"
 alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
 alias "toggleradar" "radar_hide"
@@ -196,8 +199,8 @@ alias "+shift" "+speed; bind T use_weapon_decoy; volume_up"
 alias "-shift" "-speed; bind T +spray_menu; volume_down"
 
 //// Use instructor while holding E key
-alias "+use_instructor" "+use; radar_regular; radar_scale_instructor; gameinstructor_enable 1"
-alias "-use_instructor" "-use; radar_regular; radar_scale_regular; gameinstructor_enable 0"
+alias "+use_instructor" "+use; gameinstructor_enable 1"
+alias "-use_instructor" "-use; gameinstructor_enable 0"
 
 //// Jump and throw
 alias "+jumpthrow" "+jump; -attack"
@@ -233,7 +236,7 @@ bind "MWHEELDOWN" "+jump"
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
 bind "TAB" "+show_scores"
-bind "CAPSLOCK" "toggle voice_enable" // ? TODO: Console output
+bind "CAPSLOCK" "+mute_players"
 bind "SHIFT" "+shift"
 bind "CTRL" "+ctrl"
 bind "ALT" "+alt"
