--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,17 +17,23 @@ net_client_steamdatagram_enable_override "1"
 ////
 // Audio
 ////
-volume "0.5"
-snd_musicvolume "0.2" // ?
-snd_deathcamera_volume "0.2" // ?
-snd_tensecondwarning_volume "0.2" // ?
-snd_menumusic_volume "0.2" // ?
-snd_mapobjective_volume "0.2" // ?
+volume "0.6"
+// Music Volume in Steam Overlay ?
+// GOTV Caster Volume ?
+snd_menumusic_volume "0.06"
+snd_musicvolume "0.06"
+snd_roundstart_volume "0.12"
+snd_roundend_volume "0.12"
+snd_mapobjective_volume "0.48"
+snd_tensecondwarning_volume "0.48"
+snd_deathcamera_volume "0.12"
+snd_mvp_volume "0.24"
+// Danger Zone Music Volume ?
 voice_enable "1"
-voice_scale "1"
+voice_scale "0.6"
 voice_mixer_volume "1"
 windows_speaker_config "1"
-snd_mvp_volume "0"
+snd_mute_losefocus "0"
 snd_mix_async "1"
 snd_mixahead "0.025"
 snd_pitchquality "1"
@@ -80,7 +86,7 @@ cl_hud_color "6"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "0.9"
+cl_hud_radar_scale "0.8"
 hud_scaling "0.85"
 hud_showtargetid "1"
 hud_takesshots "1"
@@ -107,7 +113,7 @@ cl_radar_square_with_scoreboard "0"
 
 //// Misc
 cl_use_opens_buy_menu "0"
-closeonbuy "1"
+closeonbuy "0"
 cl_showloadout "1"
 cl_show_team_equipment "1"
 cl_teamid_overhead_always "1"
@@ -142,8 +148,8 @@ cl_crosshair_sniper_width "1"
 // Aliases
 ////
 
-//// Broken score table fix
-alias "fix_showscores" "mat_setvideomode 1600 1200 1; mat_setvideomode 1600 1200 0"
+//// Reload resolution (fixing broken scoreboard)
+alias "reload_resolution" "mat_setvideomode 1280 1024 1; mat_setvideomode 1280 1024 0"
 
 //// General
 alias "buy_armor" "buy vesthelm; buy vest"
@@ -250,7 +256,7 @@ bind "F4" "rebuy"
 bind "F5" "disconnect"
 bind "F6" "save quick"
 bind "F7" "load quick"
-bind "F8" "fix_showscores" // ?
+bind "F8" "reload_resolution"
 bind "F9" "ignorerad" // ?
 bind "F10" "quit prompt"
 bind "F11" "mute" // ?
