--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -149,7 +149,7 @@ cl_crosshair_sniper_width "1"
 ////
 
 //// Reload resolution (fixing broken scoreboard)
-alias "reload_resolution" "mat_setvideomode 1280 1024 1; mat_setvideomode 1280 1024 0"
+alias "reload_resolution" "mat_setvideomode 1280 960 1; mat_setvideomode 1280 960 0"
 
 //// General
 alias "buy_armor" "buy vesthelm; buy vest"
@@ -257,10 +257,10 @@ bind "F5" "disconnect"
 bind "F6" "save quick"
 bind "F7" "load quick"
 bind "F8" "reload_resolution"
-bind "F9" "ignorerad" // ?
+bind "F9" "ignorerad"
 bind "F10" "quit prompt"
-bind "F11" "mute" // ?
-bind "F12" "jpeg" // ?
+bind "F11" "mute"
+bind "F12" "jpeg"
 
 //// Middle function keys
 bind "PAUSE" "pause"
