--- a/training.cfg
+++ b/training.cfg
@@ -8,6 +8,7 @@ sv_cheats "1"
 sv_infinite_ammo "2"
 game_type "0"
 game_mode "1"
+mp_autokick "0"
 
 // Teleportation aliases
 alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
