--- a/training.cfg
+++ b/training.cfg
@@ -32,30 +32,34 @@ bind "F4" "toggle bot_mimic"
 bind "F5" "mp_restartgame 1"
 bind "F6" "save_position"
 bind "F7" "load_position"
-bind "F8" "toggle sv_infinite_ammo 0 2"
-bind "F9" "toggle r_drawothermodels 2 1"
+// bind "F8" ""
+bind "F9" "toggle host_timescale 10 1"
 bind "F10" "disconnect"
 bind "F11" "togglecam"
-bind "F12" "toggle host_timescale 10 1"
+bind "F12" "toggle r_drawothermodels 2 1"
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
 bind "/" "bot_add"
-bind "'" "bot_quota 10"
+// bind "MOUSE1" "+attack"
+// bind "MOUSE2" "+attack2"
 
 // Bots
 gods
 bot_kick
+bot_quota "15"
 bot_stop "1"
 bot_dont_shoot "1"
 bot_knives_only
-bot_difficulty "expert"
-mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3" // ?
+// bot_difficulty "expert"
+// mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3" // ?
 mp_solid_teammates "1"
+mp_free_armor "2"
+mp_max_armor "2"
 mp_friendlyfire "1"
 mp_autoteambalance "0"
-mp_limitteams "20"
+mp_limitteams "0"
 
-// Times
+// Times & Conditions
 mp_warmuptime "1"
 mp_freezetime "1"
 mp_respawntime "1"
@@ -65,22 +69,24 @@ mp_respawn_on_death_t "1"
 mp_round_restart_delay "1"
 mp_halftime_duration "1"
 mp_c4timer "10"
-mp_roundtime "60"
-mp_roundtime_defuse "60"
-mp_roundtime_hostage "60"
+mp_roundtime "30"
+mp_roundtime_defuse "30"
+mp_roundtime_hostage "30"
 mp_endmatch_votenextmap "0"
+mp_ignore_round_win_conditions "1"
 
 // Buy
 mp_buy_anywhere "1"
-mp_buytime "3600"
-mp_maxmoney "32000"
-mp_startmoney "32000"
-mp_afterroundmoney "32000"
+mp_buytime "36000"
+mp_maxmoney "64000"
+mp_startmoney "64000"
+mp_afterroundmoney "64000"
 
-// Impacts and trajectory
+// Impacts & Trajectory
 sv_showimpacts "1"
 sv_showimpacts_time "3"
 sv_grenade_trajectory "1"
+sv_grenade_trajectory_dash "1"
 sv_grenade_trajectory_time "10"
 sv_grenade_trajectory_thickness "0.5"
 
