--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -5,7 +5,7 @@
 ////
 // Rates
 ////
-rate "128000"
+rate "786432"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -17,63 +17,101 @@ net_client_steamdatagram_enable_override "1"
 ////
 // Audio
 ////
+
 volume "0.6"
-// Music Volume in Steam Overlay ?
-// GOTV Caster Volume ?
+snd_musicvolume_multiplier_inoverlay "0.1"
+voice_caster_enable "0"
+voice_caster_scale "0.6"
 snd_menumusic_volume "0"
 snd_musicvolume "0"
-snd_roundstart_volume "0.12"
-snd_roundend_volume "0.12"
-snd_mapobjective_volume "0.48"
-snd_tensecondwarning_volume "0.48"
+snd_roundstart_volume "0.06"
+snd_roundend_volume "0.06"
+snd_mapobjective_volume "0.12"
+snd_tensecondwarning_volume "0.06"
 snd_deathcamera_volume "0.12"
-snd_mvp_volume "0.24"
-// Danger Zone Music Volume ?
+snd_mvp_volume "0.12"
+snd_dzmusic_volume "0.24"
 voice_enable "1"
+voice_forcemicrecord "1"
+voice_mixer_boost "0"
+voice_mixer_mute "0"
+voice_mixer_volume "1.0"
+voice_modenable "1"
+voice_positional "0"
 voice_scale "0.6"
-voice_mixer_volume "1"
+voice_system_enable "1"
+voice_threshold "2000"
 windows_speaker_config "1"
-snd_mute_losefocus "0"
+snd_music_selection "001"
+snd_music_volume_onetime_reset_2 "1"
+snd_mute_losefocus "1"
+snd_mute_mvp_music_live_players "0"
 snd_mix_async "1"
+snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
 snd_pitchquality "1"
+snd_dvar_dist_max "2000"
+snd_dvar_dist_min "300"
+snd_duckerattacktime "0.5"
+snd_duckerreleasetime "2.5"
+snd_duckerthreshold "0.15"
 snd_ducking_off "1"
-snd_front_headphone_position "90"
-snd_rear_headphone_position "90"
-snd_headphone_pan_exponent "1.2"
+snd_ducktovolume "0.55"
+snd_front_headphone_position "45"
+snd_rear_headphone_position "135"
+snd_headphone_pan_exponent "3"
 snd_headphone_pan_radial_weight "1"
-dsp_enhance_stereo "0"
-dsp_slow_cpu "0"
+snd_hrtf_distance_behind "100"
+snd_hrtf_voice_delay "0.1"
+snd_hwcompat "1"
+snd_rear_speaker_scale "1"
+snd_surround_speakers "0"
+snd_legacy_surround "0"
+snd_max_same_sounds "5"
+snd_max_same_weapon_sounds "5"
+snd_async_flush
+sound_device_override ""
 lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
-snd_async_flush
+sv_voiceenable "1"
+dsp_enhance_stereo "0"
+dsp_slow_cpu "0"
+dsp_reload
 
 ////
 // Video
 ////
-mat_monitorgamma "2.3"
+mat_monitorgamma "2.2"
+mat_monitorgamma_tv_enabled "0"
 fps_max "150"
 fps_max_menu "75"
 r_dynamic "0"
 r_drawtracers_firstperson "0"
 r_drawparticles "0"
-engine_no_focus_sleep "0"
-func_break_max_pieces "0"
+engine_no_focus_sleep "50"
+func_break_max_pieces "15"
+mat_powersavingsmode "0"
 mat_savechanges
 
 ////
 // Mouse
 ////
-sensitivity "2.25"
-zoom_sensitivity_ratio_mouse "1.05"
+sensitivity "2.06"
+zoom_sensitivity_ratio_mouse "0.92"
 m_rawinput "1"
 m_customaccel "0"
-m_customaccel_exponent "1"
+m_customaccel_exponent "1.05"
 m_customaccel_max "0"
-m_customaccel_scale "0"
+m_customaccel_scale "0.04"
+cl_mouseenable "1"
+m_filter "0"
+m_forward "1"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
-m_mousespeed "0"
+m_mousespeed "1"
+m_pitch "0.022"
+m_side "0.8"
+m_yaw "0.022"
 
 ////
 // HUD
@@ -81,35 +119,40 @@ m_mousespeed "0"
 
 //// General
 cl_hud_background_alpha "0.5"
-cl_hud_bomb_under_radar "0"
+cl_hud_bomb_under_radar "1"
 cl_hud_color "6"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "1"
+cl_hud_playercount_showcount "0"
 cl_hud_radar_scale "0.8"
-hud_scaling "0.85"
+hud_scaling "0.95"
 hud_showtargetid "1"
-hud_takesshots "1"
+hud_takesshots "0"
 
 //// POV
-viewmodel_presetpos "4" // "1" ?
-viewmodel_fov "65"
-viewmodel_offset_x "2"
-viewmodel_offset_y "2"
-viewmodel_offset_z "-2"
+viewmodel_presetpos "3" // Classic
+viewmodel_fov "68"
+viewmodel_offset_x "2.5"
+viewmodel_offset_y "0"
+viewmodel_offset_z "-1.5"
+viewmodel_recoil "1"
 cl_viewmodel_shift_left_amt "0.5"
 cl_viewmodel_shift_right_amt "0.25"
 cl_bobcycle "0.98"
-cl_bob_lower_amt "0.5"
-cl_bobamt_lat "0.1"
-cl_bobamt_vert "0.1"
+cl_bob_lower_amt "5"
+cl_bobamt_lat "0.33"
+cl_bobamt_vert "0.14"
+cl_righthand "1"
 
 //// Radar
-cl_radar_always_centered "1"
+cl_radaralpha "255"
+cl_radartype "0"
+cl_radar_always_centered "0"
 cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
-cl_radar_scale "0.6"
+cl_radar_scale "0.4"
 cl_radar_square_with_scoreboard "0"
+cl_locationalpha "0"
 
 //// Misc
 cl_use_opens_buy_menu "0"
@@ -117,32 +160,36 @@ closeonbuy "0"
 cl_showloadout "1"
 cl_show_team_equipment "1"
 cl_teamid_overhead_always "1"
-cl_teammate_colors_show "0"
+cl_teammate_colors_show "1"
 cl_autowepswitch "0"
 cl_disablefreezecam "1"
+mapoverview_icon_scale "1.0"
 
 //// Crosshair
-cl_crosshairalpha "200"
+cl_crosshairalpha "250"
 cl_crosshaircolor "5"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "50"
 cl_crosshaircolor_b "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-3"
+cl_crosshairgap "-2"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairscale "0"
 cl_crosshairsize "2"
-cl_crosshairstyle "4" // "2" ?
+cl_crosshairstyle "2"
+cl_crosshairthickness "0.075"
 cl_crosshairusealpha "1"
-cl_crosshairthickness "0.5"
 cl_fixedcrosshairgap "-2"
-cl_crosshair_outlinethickness "1"
 cl_crosshair_drawoutline "0"
-cl_crosshair_t "0"
-// cl_crosshair_dynamic_splitdist "7" ?
-// cl_crosshair_dynamic_maxdist_splitratio "0.35" ?
-// cl_crosshair_dynamic_splitalpha_innermod "1" ?
-// cl_crosshair_dynamic_splitalpha_outermod "0.5" ?
-cl_crosshair_sniper_show_normal_inaccuracy "0" ?
+cl_crosshair_dynamic_maxdist_splitratio "0.35"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.5"
+cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_outlinethickness "0.5"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
+cl_crosshair_t "0"
+crosshair "1"
 
 ////
 // Aliases
@@ -152,11 +199,12 @@ cl_crosshair_sniper_width "1"
 alias "reload_resolution" "mat_setvideomode 1280 960 1; mat_setvideomode 1280 960 0"
 
 //// General
-alias "buy_armor" "buy vesthelm; buy vest"
+alias "buy_full_armor" "buy vesthelm; buy vest"
 alias "buy_rifle" "buy ak47; buy m4a1"
-alias "buy_grenades_2flash" "buy flashbang; buy flashbang; buy incgrenade; buy molotov; buy smokegrenade"
-alias "buy_grenades_each" "buy flashbang; buy hegrenade; buy incgrenade; buy molotov; buy smokegrenade"
-alias "buy_grenades_eco" "buy flashbang; buy hegrenade"
+alias "buy_grenades_2flash" "buy flashbang; buy smokegrenade; buy incgrenade; buy molotov; buy flashbang"
+alias "buy_grenades_each" "buy flashbang; buy smokegrenade; buy incgrenade; buy molotov; buy hegrenade"
+alias "buy_granades_minimal" "buy smokegrenade; buy flashbang; buy hegrenade"
+alias "buy_grenades_eco" "buy smokegrenade; buy flashbang"
 alias "drop_bomb" "use weapon_c4; drop"
 alias "use_weapon_decoy" "use weapon_decoy"
 
@@ -184,17 +232,17 @@ alias "voice_off" "echo [!] VoIP turned OFF [!]; con_filter_enable 2; alias -mut
 alias "voice_on" "echo [!] VoIP turned ON [!]; con_filter_enable 2; alias -mute_players voice_off; voice_enable 1"
 
 //// Radar aliases
-alias "radar_scale_normal" "cl_radar_scale 0.6; cl_hud_radar_scale 0.9"
-alias "radar_scale_big" "cl_radar_scale 0.4; cl_hud_radar_scale 1.3"
+alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 0.8"
+alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.0"
 alias "+radar_scale" "+use; radar_scale_big"
 alias "-radar_scale" "-use; radar_scale_normal"
 alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
 alias "toggleradar" "radar_hide"
 
-//// CTRL+G to drop bomb, clear blood when crouching
-alias "+ctrl" "+duck; bind G drop_bomb; r_cleardecals"
-alias "-ctrl" "-duck; bind G drop; r_cleardecals"
+//// CTRL+G to drop bomb
+alias "+ctrl" "+duck; bind G drop_bomb"
+alias "-ctrl" "-duck; bind G drop"
 
 //// ALT+C to toggle radar & player ping on ALT key press
 alias "+alt" "player_ping; bind C toggleradar"
@@ -220,18 +268,13 @@ alias "-jumpduck" "-jump; -duck"
 alias "+show_scores" "+showscores; net_graph 1"
 alias "-show_scores" "-showscores; net_graph 0"
 
-//// Random grenades aliases
-alias "grenade_set1" "buy_grenades_2flash; alias buy_random_grenades grenade_set2"
-alias "grenade_set2" "buy_grenades_each; alias buy_random_grenades grenade_set1"
-alias "buy_random_grenades" "grenade_set1"
-
 ////
 // Binds
 ////
 
 //// Mouse keys
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "+attack2; r_cleardecals"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+jumpduck"
 bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade"
 bind "MOUSE5" "use weapon_flashbang"
@@ -249,7 +292,7 @@ bind "ALT" "+alt"
 bind "SPACE" "+jump"
 
 //// Upper function keys
-// bind "F1" "" ?
+bind "F1" "ignorerad"
 bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
@@ -257,8 +300,6 @@ bind "F5" "disconnect"
 bind "F6" "save quick"
 bind "F7" "load quick"
 bind "F8" "reload_resolution"
-bind "F9" "ignorerad"
-bind "F10" "quit prompt"
 bind "F11" "mute"
 bind "F12" "jpeg"
 
@@ -269,14 +310,14 @@ bind "HOME" "buy fiveseven; buy tec9"
 bind "PGUP" "buy p250"
 bind "DEL" "buy_grenades_2flash"
 bind "END" "buy_grenades_each"
-bind "PGDN" "buy_grenades_eco"
+bind "PGDN" "buy_grenades_minimal"
 
 //// Numeric keys
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
 bind "4" "use weapon_hegrenade"
-bind "5" "slot5"
+bind "5" "use weapon_healthshot; use weapon_c4"
 
 //// Movement keys
 bind "W" "+forward"
@@ -285,7 +326,7 @@ bind "A" "+moveleft"
 bind "D" "+moveright"
 
 //// 1st row (QWERTY) keys
-bind "Q" "toggle cl_righthand"
+bind "Q" "lastinv"
 bind "E" "+use_instructor"
 bind "R" "+reload"
 bind "T" "+spray_menu"
@@ -294,13 +335,13 @@ bind "U" "messagemode2"
 bind "I" "show_loadout_toggle"
 bind "[" "invprev"
 bind "]" "invnext"
-bind "\" "lastinv"
+// bind "\" ""
 
 //// 2nd row (FGHJKL) keys
-bind "F" "+lookatweapon"
+bind "F" "+lookatweapon; r_cleardecals"
 bind "G" "drop"
-bind "H" "buy_armor; buy_rifle; buy_random_grenades; buy defuser" // Rifle buy
-bind "J" "buy_armor; buy awp; buy_random_grenades; buy defuser" // AWP buy
+bind "H" "buy_full_armor; buy_rifle; buy_granades_minimal; buy defuser" // Rifle buy
+bind "J" "buy_full_armor; buy awp; buy_granades_minimal; buy defuser" // AWP buy
 bind "K" "radio1"
 bind "L" "buy p250; buy_grenades_eco" // Eco buy
 
@@ -314,6 +355,7 @@ bind "N" "buy vest; buy deagle; buy_grenades_eco" // Half buy
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
+// bind "/" ""
 
 // Arrow keys
 bind "UPARROW" "enemyspot"
@@ -333,7 +375,7 @@ bind "KP_UPARROW" "buy p90" // 8
 bind "KP_PGUP" "buy xm1014" // 9
 bind "KP_INS" "buy defuser" // 0
 bind "KP_DEL" "buy taser" // Dot
-bind "KP_ENTER" "buy_armor" // Enter
+bind "KP_ENTER" "buy_full_armor" // Enter
 bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
 bind "KP_SLASH" "buy negev" // Slash
 bind "KP_PLUS" "+volume_up" // Plus
@@ -343,9 +385,17 @@ bind "KP_MINUS" "+volume_down" // Minus
 // Misc
 ////
 net_graph "0"
+net_graphheight "164"
+net_graphholdsvframerate "0"
+net_graphipc "0"
+net_graphmsecs "400"
 net_graphpos "2"
 net_graphproportionalfont "1"
-net_graphheight "256"
+net_graphshowinterp "1"
+net_graphshowlatency "1"
+net_graphshowsvframerate "0"
+net_graphsolid "1"
+net_graphtext "1"
 ent_absbox "player"
 developer "1"
 con_enable "1"
@@ -355,6 +405,7 @@ con_filter_text "Damage Given"
 ui_steam_overlay_notification_position "bottomright"
 player_nevershow_communityservermessage "1"
 mm_dedicated_search_maxping "100"
+zoom_sensitivity_ratio_joystick "1.0"
 cl_downloadfilter "all"
 cl_disablehtmlmotd "1"
 cl_showfps "0"
