--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -166,26 +166,26 @@ cl_disablefreezecam "1"
 mapoverview_icon_scale "1.0"
 
 //// Crosshair
-cl_crosshairalpha "250"
+cl_crosshairalpha "255"
 cl_crosshaircolor "5"
-cl_crosshaircolor_r "250"
-cl_crosshaircolor_g "50"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_r "255"
+cl_crosshaircolor_g "200"
+cl_crosshaircolor_b "200"
 cl_crosshairdot "0"
-cl_crosshairgap "-2"
+cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairscale "0"
 cl_crosshairsize "2"
-cl_crosshairstyle "2"
-cl_crosshairthickness "0.075"
+cl_crosshairstyle "4"
+cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "-2"
+cl_fixedcrosshairgap "0"
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
+cl_crosshair_outlinethickness "0"
+cl_crosshair_dynamic_maxdist_splitratio "0.2"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "7"
-cl_crosshair_outlinethickness "0.5"
+cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
@@ -385,12 +385,12 @@ bind "KP_MINUS" "+volume_down" // Minus
 // Misc
 ////
 net_graph "0"
-net_graphheight "164"
+net_graphheight "128"
 net_graphholdsvframerate "0"
 net_graphipc "0"
 net_graphmsecs "400"
 net_graphpos "2"
-net_graphproportionalfont "1"
+net_graphproportionalfont "0"
 net_graphshowinterp "1"
 net_graphshowlatency "1"
 net_graphshowsvframerate "0"
@@ -408,6 +408,7 @@ mm_dedicated_search_maxping "100"
 zoom_sensitivity_ratio_joystick "1.0"
 cl_downloadfilter "all"
 cl_disablehtmlmotd "1"
+cl_join_advertise "2"
 cl_showfps "0"
 
 ////
