--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,7 +18,7 @@ net_client_steamdatagram_enable_override "1"
 // Audio
 ////
 
-volume "0.6"
+volume "0.7"
 snd_musicvolume_multiplier_inoverlay "0.1"
 voice_caster_enable "0"
 voice_caster_scale "0.6"
@@ -81,7 +81,7 @@ dsp_reload
 ////
 // Video
 ////
-mat_monitorgamma "2.2"
+mat_monitorgamma "2.3"
 mat_monitorgamma_tv_enabled "0"
 fps_max "150"
 fps_max_menu "75"
@@ -180,8 +180,8 @@ cl_crosshairstyle "4"
 cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "0"
-cl_crosshair_drawoutline "1"
-cl_crosshair_outlinethickness "0.5"
+cl_crosshair_drawoutline "0"
+cl_crosshair_outlinethickness "0"
 cl_crosshair_dynamic_maxdist_splitratio "0.2"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
@@ -199,20 +199,25 @@ crosshair "1"
 alias "reload_resolution" "mat_setvideomode 1280 960 1; mat_setvideomode 1280 960 0"
 
 //// General
-alias "buy_full_armor" "buy vesthelm; buy vest"
+alias "buy_set_rifle" "buy_full_armor; buy_rifle; buy_grenades_minimal; buy defuser"
+alias "buy_set_awp" "buy_full_armor; buy awp; buy_grenades_minimal; buy defuser"
+alias "buy_set_half" "buy vest; buy deagle; buy_grenades_eco"
+alias "buy_set_eco" "buy elite; buy_grenades_eco"
+alias "buy_full_armor" "buy vest; buy vesthelm"
 alias "buy_rifle" "buy ak47; buy m4a1"
-alias "buy_grenades_2flash" "buy flashbang; buy smokegrenade; buy incgrenade; buy molotov; buy flashbang"
-alias "buy_grenades_each" "buy flashbang; buy smokegrenade; buy incgrenade; buy molotov; buy hegrenade"
-alias "buy_granades_minimal" "buy smokegrenade; buy flashbang; buy hegrenade"
-alias "buy_grenades_eco" "buy smokegrenade; buy flashbang"
+alias "buy_grenades_2flash" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy flashbang"
+alias "buy_grenades_each" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy hegrenade"
+alias "buy_grenades_minimal" "buy smokegrenade; buy flashbang; buy hegrenade"
+alias "buy_grenades_eco" "buy flashbang; buy hegrenade"
 alias "drop_bomb" "use weapon_c4; drop"
-alias "use_weapon_decoy" "use weapon_decoy"
+alias "bind_buy_sets" "bind H buy_set_rifle; bind J buy_set_awp; bind N buy_set_half; bind L buy_set_eco"
+alias "unbind_buy_sets" "unbind H; unbind J; unbind N; unbind L"
 
 //// Volume aliases
 alias "+volume_up" "con_filter_enable 0"
 alias "+volume_down" "con_filter_enable 0"
-alias "-volume_up" "volume_set_5"
-alias "-volume_down" "volume_set_7"
+alias "-volume_up" "volume_set_8"
+alias "-volume_down" "volume_set_6"
 alias "volume_set_0" "echo [--------------------] Volume:   0%; con_filter_enable 2; alias -volume_up volume_set_1; volume 0.0"
 alias "volume_set_1" "echo [##------------------] Volume:  10%; con_filter_enable 2; alias -volume_down volume_set_0; alias -volume_up volume_set_2; volume 0.1"
 alias "volume_set_2" "echo [####----------------] Volume:  20%; con_filter_enable 2; alias -volume_down volume_set_1; alias -volume_up volume_set_3; volume 0.2"
@@ -240,17 +245,17 @@ alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
 alias "toggleradar" "radar_hide"
 
-//// CTRL+G to drop bomb
-alias "+ctrl" "+duck; bind G drop_bomb"
-alias "-ctrl" "-duck; bind G drop"
+//// CTRL+G to drop bomb & CTRL+(H or J or N or L) to buy set
+alias "+ctrl" "+duck; bind G drop_bomb; bind_buy_sets"
+alias "-ctrl" "-duck; bind G drop; unbind_buy_sets"
 
 //// ALT+C to toggle radar & player ping on ALT key press
 alias "+alt" "player_ping; bind C toggleradar"
 alias "-alt" "bind C +radar_scale"
 
-//// SHIFT+T to use decoy & increase volume when walking
-alias "+shift" "+speed; bind T use_weapon_decoy; volume_up"
-alias "-shift" "-speed; bind T +spray_menu; volume_down"
+//// Increase volume when walking
+alias "+shift" "+speed; volume_up"
+alias "-shift" "-speed; volume_down"
 
 //// Use instructor while holding E key
 alias "+use_instructor" "+use; gameinstructor_enable 1"
@@ -276,8 +281,8 @@ alias "-show_scores" "-showscores; net_graph 0"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+jumpduck"
-bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade"
-bind "MOUSE5" "use weapon_flashbang"
+bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade; r_cleardecals"
+bind "MOUSE5" "use weapon_flashbang; r_cleardecals"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -300,6 +305,8 @@ bind "F5" "disconnect"
 bind "F6" "save quick"
 bind "F7" "load quick"
 bind "F8" "reload_resolution"
+unbind "F9"
+unbind "F10"
 bind "F11" "mute"
 bind "F12" "jpeg"
 
@@ -310,14 +317,14 @@ bind "HOME" "buy fiveseven; buy tec9"
 bind "PGUP" "buy p250"
 bind "DEL" "buy_grenades_2flash"
 bind "END" "buy_grenades_each"
-bind "PGDN" "buy_grenades_minimal"
+bind "PGDN" "buy_grenades_eco"
 
 //// Numeric keys
-bind "1" "slot1"
-bind "2" "slot2"
-bind "3" "slot3"
-bind "4" "use weapon_hegrenade"
-bind "5" "use weapon_healthshot; use weapon_c4"
+bind "1" "slot1; r_cleardecals"
+bind "2" "slot2; r_cleardecals"
+bind "3" "slot3; r_cleardecals"
+bind "4" "use weapon_hegrenade; r_cleardecals"
+bind "5" "use weapon_healthshot; use weapon_c4; r_cleardecals"
 
 //// Movement keys
 bind "W" "+forward"
@@ -335,27 +342,27 @@ bind "U" "messagemode2"
 bind "I" "show_loadout_toggle"
 bind "[" "invprev"
 bind "]" "invnext"
-// bind "\" ""
+bind "\" "use weapon_decoy; r_cleardecals"
 
 //// 2nd row (FGHJKL) keys
 bind "F" "+lookatweapon; r_cleardecals"
 bind "G" "drop"
-bind "H" "buy_full_armor; buy_rifle; buy_granades_minimal; buy defuser" // Rifle buy
-bind "J" "buy_full_armor; buy awp; buy_granades_minimal; buy defuser" // AWP buy
+unbind "H"
+unbind "J"
 bind "K" "radio1"
-bind "L" "buy p250; buy_grenades_eco" // Eco buy
+unbind "L"
 
 //// 3rd row (ZXCVBN) keys
-bind "Z" "use weapon_smokegrenade"
+bind "Z" "use weapon_smokegrenade; r_cleardecals"
 bind "X" "+jumpthrow"
 bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
-bind "N" "buy vest; buy deagle; buy_grenades_eco" // Half buy
+unbind "N"
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
-// bind "/" ""
+unbind "/"
 
 // Arrow keys
 bind "UPARROW" "enemyspot"
@@ -366,18 +373,18 @@ bind "LEFTARROW" "negative"
 //// Numeric keyboard keys
 bind "KP_END" "buy m4a1; buy ak47" // 1
 bind "KP_DOWNARROW" "buy famas; buy galilar" // 2
-bind "KP_PGDN" "buy ump45" // 3
+bind "KP_PGDN" "buy mac10; buy mp9" // 3
 bind "KP_LEFTARROW" "buy awp" // 4
 bind "KP_5" "buy ssg08" // 5
 bind "KP_RIGHTARROW" "buy sg556; buy aug" // 6
-bind "KP_HOME" "buy mac10; buy mp9" // 7
+bind "KP_HOME" "buy ump45" // 7
 bind "KP_UPARROW" "buy p90" // 8
-bind "KP_PGUP" "buy xm1014" // 9
+bind "KP_PGUP" "buy negev" // 9
 bind "KP_INS" "buy defuser" // 0
 bind "KP_DEL" "buy taser" // Dot
 bind "KP_ENTER" "buy_full_armor" // Enter
 bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
-bind "KP_SLASH" "buy negev" // Slash
+bind "KP_SLASH" "buy xm1014" // Slash
 bind "KP_PLUS" "+volume_up" // Plus
 bind "KP_MINUS" "+volume_down" // Minus
 
