--- a/training.cfg
+++ b/training.cfg
@@ -32,16 +32,14 @@ bind "F4" "toggle bot_mimic"
 bind "F5" "mp_restartgame 1"
 bind "F6" "save_position"
 bind "F7" "load_position"
-// bind "F8" ""
-bind "F9" "toggle host_timescale 10 1"
-bind "F10" "disconnect"
+bind "F8" "toggle host_timescale 5 1"
+unbind "F9"
+unbind "F10"
 bind "F11" "togglecam"
 bind "F12" "toggle r_drawothermodels 2 1"
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
 bind "/" "bot_add"
-// bind "MOUSE1" "+attack"
-// bind "MOUSE2" "+attack2"
 
 // Bots
 gods
