--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -199,18 +199,19 @@ crosshair "1"
 alias "reload_resolution" "mat_setvideomode 1280 960 1; mat_setvideomode 1280 960 0"
 
 //// General
-alias "buy_set_rifle" "buy_full_armor; buy_rifle; buy_grenades_minimal; buy defuser"
-alias "buy_set_awp" "buy_full_armor; buy awp; buy_grenades_minimal; buy defuser"
-alias "buy_set_half" "buy vest; buy deagle; buy_grenades_eco"
+alias "buy_set_rifle1" "buy_rifle1; buy_grenades_minimal; buy defuser"
+alias "buy_set_rifle2" "buy_rifle2; buy_grenades_minimal; buy defuser"
+alias "buy_set_scout" "buy ssg08; buy elite; buy_grenades_eco"
 alias "buy_set_eco" "buy elite; buy_grenades_eco"
 alias "buy_full_armor" "buy vest; buy vesthelm"
-alias "buy_rifle" "buy ak47; buy m4a1"
+alias "buy_rifle1" "buy ak47; buy m4a1"
+alias "buy_rifle2" "buy famas; buy galilar"
 alias "buy_grenades_2flash" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy flashbang"
 alias "buy_grenades_each" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy hegrenade"
 alias "buy_grenades_minimal" "buy smokegrenade; buy flashbang; buy hegrenade"
-alias "buy_grenades_eco" "buy flashbang; buy hegrenade"
+alias "buy_grenades_eco" "buy flashbang; buy smokegrenade"
 alias "drop_bomb" "use weapon_c4; drop"
-alias "bind_buy_sets" "bind H buy_set_rifle; bind J buy_set_awp; bind N buy_set_half; bind L buy_set_eco"
+alias "bind_buy_sets" "bind H buy_set_rifle1; bind J buy_set_rifle2; bind N buy_set_scout; bind L buy_set_eco"
 alias "unbind_buy_sets" "unbind H; unbind J; unbind N; unbind L"
 
 //// Volume aliases
@@ -333,7 +334,7 @@ bind "A" "+moveleft"
 bind "D" "+moveright"
 
 //// 1st row (QWERTY) keys
-bind "Q" "lastinv"
+bind "Q" "toggle cl_righthand; r_cleardecals"
 bind "E" "+use_instructor"
 bind "R" "+reload"
 bind "T" "+spray_menu"
@@ -371,8 +372,8 @@ bind "RIGHTARROW" "roger"
 bind "LEFTARROW" "negative"
 
 //// Numeric keyboard keys
-bind "KP_END" "buy m4a1; buy ak47" // 1
-bind "KP_DOWNARROW" "buy famas; buy galilar" // 2
+bind "KP_END" "buy_rifle1" // 1
+bind "KP_DOWNARROW" "buy_rifle2" // 2
 bind "KP_PGDN" "buy mac10; buy mp9" // 3
 bind "KP_LEFTARROW" "buy awp" // 4
 bind "KP_5" "buy ssg08" // 5
