--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -246,9 +246,9 @@ alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
 alias "toggleradar" "radar_hide"
 
-//// CTRL+G to drop bomb & CTRL+(H or J or N or L) to buy set
-alias "+ctrl" "+duck; bind G drop_bomb; bind_buy_sets"
-alias "-ctrl" "-duck; bind G drop; unbind_buy_sets"
+//// CTRL+F to present weapon & CTRL+G to drop bomb & CTRL+(H or J or N or L) to buy set
+alias "+ctrl" "+duck; bind F +lookatweapon; bind G drop_bomb; bind_buy_sets"
+alias "-ctrl" "-duck; bind F r_cleardecals; bind G drop; unbind_buy_sets"
 
 //// ALT+C to toggle radar & player ping on ALT key press
 alias "+alt" "player_ping; bind C toggleradar"
@@ -346,7 +346,7 @@ bind "]" "invnext"
 bind "\" "use weapon_decoy; r_cleardecals"
 
 //// 2nd row (FGHJKL) keys
-bind "F" "+lookatweapon; r_cleardecals"
+bind "F" "r_cleardecals"
 bind "G" "drop"
 unbind "H"
 unbind "J"
