--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,5 @@
 ////
-// autoexec.cfg by Ba(c)sowy
+// autoexec.cfg by BasowyBemben
 ////
 
 ////
@@ -11,19 +11,20 @@ cl_updaterate "128"
 cl_interp "0"
 cl_interp_ratio "1"
 cl_interpolate "1"
+cl_predict "1"
 cl_lagcompensation "1"
+cl_timeout "180"
 net_client_steamdatagram_enable_override "1"
 
 ////
 // Audio
 ////
 
-volume "0.7"
+volume "0.4"
 snd_musicvolume_multiplier_inoverlay "0.1"
 voice_caster_enable "0"
 voice_caster_scale "0.6"
 snd_menumusic_volume "0"
-snd_musicvolume "0"
 snd_roundstart_volume "0.06"
 snd_roundend_volume "0.06"
 snd_mapobjective_volume "0.12"
@@ -41,7 +42,6 @@ voice_positional "0"
 voice_scale "0.6"
 voice_system_enable "1"
 voice_threshold "2000"
-windows_speaker_config "1"
 snd_music_selection "001"
 snd_music_volume_onetime_reset_2 "1"
 snd_mute_losefocus "1"
@@ -66,12 +66,10 @@ snd_hrtf_voice_delay "0.1"
 snd_hwcompat "1"
 snd_rear_speaker_scale "1"
 snd_surround_speakers "0"
-snd_legacy_surround "0"
 snd_max_same_sounds "5"
 snd_max_same_weapon_sounds "5"
 snd_async_flush
 sound_device_override ""
-lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
 sv_voiceenable "1"
 dsp_enhance_stereo "0"
@@ -83,8 +81,8 @@ dsp_reload
 ////
 mat_monitorgamma "2.3"
 mat_monitorgamma_tv_enabled "0"
-fps_max "150"
-fps_max_menu "75"
+fps_max "300"
+fps_max_menu "150"
 r_dynamic "0"
 r_drawtracers_firstperson "0"
 r_drawparticles "0"
@@ -96,15 +94,13 @@ mat_savechanges
 ////
 // Mouse
 ////
-sensitivity "2.06"
+sensitivity "1.28" // 800 DPI
 zoom_sensitivity_ratio_mouse "0.92"
 m_rawinput "1"
 m_customaccel "0"
 m_customaccel_exponent "1.05"
 m_customaccel_max "0"
 m_customaccel_scale "0.04"
-cl_mouseenable "1"
-m_filter "0"
 m_forward "1"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
@@ -145,47 +141,46 @@ cl_bobamt_vert "0.14"
 cl_righthand "1"
 
 //// Radar
-cl_radaralpha "255"
-cl_radartype "0"
 cl_radar_always_centered "0"
 cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
 cl_radar_scale "0.4"
 cl_radar_square_with_scoreboard "0"
-cl_locationalpha "0"
 
 //// Misc
++cl_show_team_equipment
 cl_use_opens_buy_menu "0"
 closeonbuy "0"
 cl_showloadout "1"
-cl_show_team_equipment "1"
-cl_teamid_overhead_always "1"
 cl_teammate_colors_show "1"
 cl_autowepswitch "0"
 cl_disablefreezecam "1"
+cl_buywheel_nomousecentering "1"
+cl_quickinventory_lastinv "1"
+cl_show_clan_in_death_notice "0"
+cl_scoreboard_survivors_always_on "0"
 mapoverview_icon_scale "1.0"
 
 //// Crosshair
 cl_crosshairalpha "255"
-cl_crosshaircolor "5"
+cl_crosshaircolor "2" // Yellow
 cl_crosshaircolor_r "255"
 cl_crosshaircolor_g "255"
-cl_crosshaircolor_b "255"
+cl_crosshaircolor_b "0"
 cl_crosshairdot "0"
 cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
-cl_crosshairsize "2"
+cl_crosshairsize "1.5"
 cl_crosshairstyle "4"
-cl_crosshairthickness "0"
+cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "0"
+cl_fixedcrosshairgap "-4.5"
 cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.2"
+cl_crosshair_dynamic_maxdist_splitratio "0.3"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "3"
+cl_crosshair_dynamic_splitdist "0"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
@@ -195,72 +190,67 @@ crosshair "1"
 // Aliases
 ////
 
-//// Reload resolution (fixing broken scoreboard)
-alias "reload_resolution" "mat_setvideomode 1280 960 1; mat_setvideomode 1280 960 0"
+//// Buy aliases
+alias "full_buy_1" "buy_rifle_1; buy_vest_helm; grenades_3; buy_defuser" // T:4400$ CT:5000$
+alias "full_buy_2" "buy_rifle_2; buy_vest_helm; grenades_3; buy_defuser" // T:3500$ CT:4150$
+alias "half_buy" "buy_pistol_1; buy_vest_only; grenades_4" // 1850$
+alias "eco_buy" "buy_pistol_2; buy_flash" // 500$
+alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
+alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
+alias "grenades_3" "buy_smoke; buy_flash; buy_flash" // 700$
+alias "grenades_4" "buy_flash; buy_smoke" // 500$
+alias "buy_vest_helm" "buy vest; buy vesthelm" // 1000$
+alias "buy_vest_only" "buy vest" // 650$
+alias "buy_defuser" "buy defuser" // 400$
+alias "buy_flash" "buy flashbang" // 200$
+alias "buy_smoke" "buy smokegrenade" // 300$
+alias "buy_molotov" "buy incgrenade; buy molotov" // T:400$ CT:600$
+alias "buy_hegrenade" "buy hegrenade" // 300$
+alias "buy_rifle_1" "buy ak47; buy m4a1"
+alias "buy_rifle_2" "buy galilar; buy famas"
+alias "buy_pistol_1" "buy deagle"
+alias "buy_pistol_2" "buy p250"
 
-//// General
-alias "buy_set_rifle1" "buy_rifle1; buy_grenades_minimal; buy defuser"
-alias "buy_set_rifle2" "buy_rifle2; buy_grenades_minimal; buy defuser"
-alias "buy_set_scout" "buy ssg08; buy elite; buy_grenades_eco"
-alias "buy_set_eco" "buy elite; buy_grenades_eco"
-alias "buy_full_armor" "buy vest; buy vesthelm"
-alias "buy_rifle1" "buy ak47; buy m4a1"
-alias "buy_rifle2" "buy famas; buy galilar"
-alias "buy_grenades_2flash" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy flashbang"
-alias "buy_grenades_each" "buy incgrenade; buy molotov; buy smokegrenade; buy flashbang; buy hegrenade"
-alias "buy_grenades_minimal" "buy smokegrenade; buy flashbang; buy hegrenade"
-alias "buy_grenades_eco" "buy flashbang; buy smokegrenade"
+//// General aliases
 alias "drop_bomb" "use weapon_c4; drop"
-alias "bind_buy_sets" "bind H buy_set_rifle1; bind J buy_set_rifle2; bind N buy_set_scout; bind L buy_set_eco"
-alias "unbind_buy_sets" "unbind H; unbind J; unbind N; unbind L"
+alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K half_buy; bind L eco_buy"
+alias "unbind_sets" "unbind H; unbind J; unbind K; unbind L"
 
 //// Volume aliases
-alias "+volume_up" "con_filter_enable 0"
-alias "+volume_down" "con_filter_enable 0"
-alias "-volume_up" "volume_set_8"
-alias "-volume_down" "volume_set_6"
-alias "volume_set_0" "echo [--------------------] Volume:   0%; con_filter_enable 2; alias -volume_up volume_set_1; volume 0.0"
-alias "volume_set_1" "echo [##------------------] Volume:  10%; con_filter_enable 2; alias -volume_down volume_set_0; alias -volume_up volume_set_2; volume 0.1"
-alias "volume_set_2" "echo [####----------------] Volume:  20%; con_filter_enable 2; alias -volume_down volume_set_1; alias -volume_up volume_set_3; volume 0.2"
-alias "volume_set_3" "echo [######--------------] Volume:  30%; con_filter_enable 2; alias -volume_down volume_set_2; alias -volume_up volume_set_4; volume 0.3"
-alias "volume_set_4" "echo [########------------] Volume:  40%; con_filter_enable 2; alias -volume_down volume_set_3; alias -volume_up volume_set_5; volume 0.4"
-alias "volume_set_5" "echo [##########----------] Volume:  50%; con_filter_enable 2; alias -volume_down volume_set_4; alias -volume_up volume_set_6; volume 0.5"
-alias "volume_set_6" "echo [############--------] Volume:  60%; con_filter_enable 2; alias -volume_down volume_set_5; alias -volume_up volume_set_7; volume 0.6"
-alias "volume_set_7" "echo [##############------] Volume:  70%; con_filter_enable 2; alias -volume_down volume_set_6; alias -volume_up volume_set_8; volume 0.7"
-alias "volume_set_8" "echo [################----] Volume:  80%; con_filter_enable 2; alias -volume_down volume_set_7; alias -volume_up volume_set_9; volume 0.8"
-alias "volume_set_9" "echo [##################--] Volume:  90%; con_filter_enable 2; alias -volume_down volume_set_8; alias -volume_up volume_set_m; volume 0.9"
-alias "volume_set_m" "echo [####################] Volume: 100%; con_filter_enable 2; alias -volume_down volume_set_9; volume 1.0"
+alias "volume_up" "volume_set_60"
+alias "volume_down" "volume_set_20"
+alias "volume_set_0" "alias volume_down volume_set_0; alias volume_up volume_set_20; volume 0.0"
+alias "volume_set_20" "alias volume_down volume_set_0; alias volume_up volume_set_40; volume 0.2"
+alias "volume_set_40" "alias volume_down volume_set_20; alias volume_up volume_set_60; volume 0.4"
+alias "volume_set_60" "alias volume_down volume_set_40; alias volume_up volume_set_80; volume 0.6"
+alias "volume_set_80" "alias volume_down volume_set_60; alias volume_up volume_set_100; volume 0.8"
+alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_set_100; volume 1.0"
 
 //// Mute aliases
-alias "+mute_players" "con_filter_enable 0"
-alias "-mute_players" "voice_off"
-alias "voice_off" "echo [!] VoIP turned OFF [!]; con_filter_enable 2; alias -mute_players voice_on; voice_enable 0"
-alias "voice_on" "echo [!] VoIP turned ON [!]; con_filter_enable 2; alias -mute_players voice_off; voice_enable 1"
+alias "mute_players" "voice_off"
+alias "voice_off" "alias mute_players voice_on; voice_enable 0"
+alias "voice_on" "alias mute_players voice_off; voice_enable 1"
 
 //// Radar aliases
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 0.8"
 alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.0"
 alias "+radar_scale" "+use; radar_scale_big"
 alias "-radar_scale" "-use; radar_scale_normal"
-alias "radar_hide" "cl_drawhud_force_radar -1; alias toggleradar radar_show"
-alias "radar_show" "cl_drawhud_force_radar 1; alias toggleradar radar_hide"
-alias "toggleradar" "radar_hide"
+alias "radar_hide" "cl_drawhud_force_radar -1; alias toggle_radar radar_show"
+alias "radar_show" "cl_drawhud_force_radar 1; alias toggle_radar radar_hide"
+alias "toggle_radar" "radar_hide"
 
-//// CTRL+F to present weapon & CTRL+G to drop bomb & CTRL+(H or J or N or L) to buy set
-alias "+ctrl" "+duck; bind F +lookatweapon; bind G drop_bomb; bind_buy_sets"
-alias "-ctrl" "-duck; bind F r_cleardecals; bind G drop; unbind_buy_sets"
+//// CTRL+F to present weapon & CTRL+G to drop bomb & CTRL+HJKL) to buy sets
+alias "+ctrl" "+duck; bind F +lookatweapon; bind G drop_bomb; bind_sets"
+alias "-ctrl" "-duck; bind F r_cleardecals; bind G drop; unbind_sets"
 
-//// ALT+C to toggle radar & player ping on ALT key press
-alias "+alt" "player_ping; bind C toggleradar"
+//// ALT+C to toggle radar
+alias "+alt" "bind C toggle_radar"
 alias "-alt" "bind C +radar_scale"
 
 //// Increase volume when walking
 alias "+shift" "+speed; volume_up"
 alias "-shift" "-speed; volume_down"
-
-//// Use instructor while holding E key
-alias "+use_instructor" "+use; gameinstructor_enable 1"
-alias "-use_instructor" "-use; gameinstructor_enable 0"
 
 //// Jump and throw
 alias "+jumpthrow" "+jump; -attack"
@@ -281,7 +271,7 @@ alias "-show_scores" "-showscores; net_graph 0"
 //// Mouse keys
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "+jumpduck"
+bind "MOUSE3" "player_ping"
 bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade; r_cleardecals"
 bind "MOUSE5" "use weapon_flashbang; r_cleardecals"
 bind "MWHEELUP" "+jump"
@@ -291,21 +281,21 @@ bind "MWHEELDOWN" "+jump"
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
 bind "TAB" "+show_scores"
-bind "CAPSLOCK" "+mute_players"
+bind "CAPSLOCK" "mute_players"
 bind "SHIFT" "+shift"
 bind "CTRL" "+ctrl"
 bind "ALT" "+alt"
-bind "SPACE" "+jump"
+bind "SPACE" "+jumpduck"
 
 //// Upper function keys
 bind "F1" "ignorerad"
 bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
-bind "F5" "disconnect"
+bind "F5" "say glgl"
 bind "F6" "save quick"
 bind "F7" "load quick"
-bind "F8" "reload_resolution"
+bind "F8" "disconnect"
 unbind "F9"
 unbind "F10"
 bind "F11" "mute"
@@ -313,12 +303,12 @@ bind "F12" "jpeg"
 
 //// Middle function keys
 bind "PAUSE" "pause"
-bind "INS" "buy deagle"
+bind "INS" "buy elite"
+bind "DEL" "buy mp7"
 bind "HOME" "buy fiveseven; buy tec9"
-bind "PGUP" "buy p250"
-bind "DEL" "buy_grenades_2flash"
-bind "END" "buy_grenades_each"
-bind "PGDN" "buy_grenades_eco"
+bind "END" "grenades_1"
+bind "PGUP" "grenades_4"
+bind "PGDN" "grenades_2"
 
 //// Numeric keys
 bind "1" "slot1; r_cleardecals"
@@ -326,6 +316,7 @@ bind "2" "slot2; r_cleardecals"
 bind "3" "slot3; r_cleardecals"
 bind "4" "use weapon_hegrenade; r_cleardecals"
 bind "5" "use weapon_healthshot; use weapon_c4; r_cleardecals"
+bind "6" "use weapon_decoy; r_cleardecals"
 
 //// Movement keys
 bind "W" "+forward"
@@ -334,23 +325,22 @@ bind "A" "+moveleft"
 bind "D" "+moveright"
 
 //// 1st row (QWERTY) keys
-bind "Q" "toggle cl_righthand; r_cleardecals"
-bind "E" "+use_instructor"
+bind "Q" "+quickinv"
+bind "E" "+use"
 bind "R" "+reload"
 bind "T" "+spray_menu"
 bind "Y" "messagemode"
 bind "U" "messagemode2"
-bind "I" "show_loadout_toggle"
 bind "[" "invprev"
 bind "]" "invnext"
-bind "\" "use weapon_decoy; r_cleardecals"
+bind "\" "buy_vest_helm; buy_defuser"
 
 //// 2nd row (FGHJKL) keys
 bind "F" "r_cleardecals"
 bind "G" "drop"
 unbind "H"
 unbind "J"
-bind "K" "radio1"
+unbind "K"
 unbind "L"
 
 //// 3rd row (ZXCVBN) keys
@@ -359,35 +349,35 @@ bind "X" "+jumpthrow"
 bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
-unbind "N"
+bind "N" "toggle cl_righthand"
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
 
 // Arrow keys
-bind "UPARROW" "enemyspot"
-bind "DOWNARROW" "sectorclear"
-bind "RIGHTARROW" "roger"
-bind "LEFTARROW" "negative"
+bind "UPARROW" "roger"
+bind "DOWNARROW" "negative"
+bind "RIGHTARROW" "enemyspot"
+bind "LEFTARROW" "sectorclear"
 
 //// Numeric keyboard keys
-bind "KP_END" "buy_rifle1" // 1
-bind "KP_DOWNARROW" "buy_rifle2" // 2
-bind "KP_PGDN" "buy mac10; buy mp9" // 3
+bind "KP_END" "buy_rifle_1" // 1
+bind "KP_DOWNARROW" "buy_rifle_2" // 2
+bind "KP_PGDN" "buy ump45" // 3
 bind "KP_LEFTARROW" "buy awp" // 4
 bind "KP_5" "buy ssg08" // 5
 bind "KP_RIGHTARROW" "buy sg556; buy aug" // 6
-bind "KP_HOME" "buy ump45" // 7
+bind "KP_HOME" "buy mac10; buy mp9" // 7
 bind "KP_UPARROW" "buy p90" // 8
 bind "KP_PGUP" "buy negev" // 9
-bind "KP_INS" "buy defuser" // 0
+bind "KP_INS" "buy_defuser" // 0
 bind "KP_DEL" "buy taser" // Dot
-bind "KP_ENTER" "buy_full_armor" // Enter
+bind "KP_ENTER" "buy_vest_helm" // Enter
 bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
 bind "KP_SLASH" "buy xm1014" // Slash
-bind "KP_PLUS" "+volume_up" // Plus
-bind "KP_MINUS" "+volume_down" // Minus
+bind "KP_PLUS" "volume_up" // Plus
+bind "KP_MINUS" "volume_down" // Minus
 
 ////
 // Misc
@@ -405,14 +395,10 @@ net_graphshowsvframerate "0"
 net_graphsolid "1"
 net_graphtext "1"
 ent_absbox "player"
-developer "1"
-con_enable "1"
-con_filter_enable "2"
-con_filter_text_out "Player:"
-con_filter_text "Damage Given"
+ui_setting_advertiseforhire_auto "0"
 ui_steam_overlay_notification_position "bottomright"
 player_nevershow_communityservermessage "1"
-mm_dedicated_search_maxping "100"
+mm_dedicated_search_maxping "80"
 zoom_sensitivity_ratio_joystick "1.0"
 cl_downloadfilter "all"
 cl_disablehtmlmotd "1"
