--- a/training.cfg
+++ b/training.cfg
@@ -1,5 +1,5 @@
 ////
-// autoexec.cfg by Ba(c)sowy
+// training.cfg by BasowyBemben
 ////
 
 // General
@@ -12,34 +12,87 @@ mp_autokick "0"
 
 // Teleportation aliases
 alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
-alias "load_position" "exec banned_ip.log; togglenoclip0; play ui\csgo_ui_page_scroll.wav"
+alias "load_position" "exec banned_ip.log; toggle_noclip_0; play ui\csgo_ui_page_scroll.wav"
+alias "toggle_tp_2" "ent_teleport 2; alias toggle_tp toggle_tp_3"
+alias "toggle_tp_3" "ent_teleport 3; alias toggle_tp toggle_tp_4"
+alias "toggle_tp_4" "ent_teleport 4; alias toggle_tp toggle_tp_5"
+alias "toggle_tp_5" "ent_teleport 5; alias toggle_tp toggle_tp_6"
+alias "toggle_tp_6" "ent_teleport 6; alias toggle_tp toggle_tp_7"
+alias "toggle_tp_7" "ent_teleport 7; alias toggle_tp toggle_tp_2"
+alias "toggle_tp" "toggle_tp_2"
+
+// Timescale aliases
+alias "+fastforward" "host_timescale 5; play ui\cs_info"
+alias "-fastforward" "host_timescale 1"
 
 // Toggle noclip aliases
-alias "togglenoclip0" "noclip 0; alias togglenoclip togglenoclip1"
-alias "togglenoclip1" "noclip 1; alias togglenoclip togglenoclip0"
-alias "togglenoclip" "togglenoclip1"
+alias "toggle_noclip_0" "noclip 0; alias toggle_noclip toggle_noclip_1"
+alias "toggle_noclip_1" "noclip 1; alias toggle_noclip toggle_noclip_0"
+alias "toggle_noclip" "toggle_noclip_1"
 
 // Toggle camera aliases
-alias "togglecam1" "cam_command 1; alias togglecam togglecam2"
-alias "togglecam2" "cam_command 2; alias togglecam togglecam1"
-alias "togglecam" "togglecam1"
+alias "toggle_cam_1" "cam_command 1; alias toggle_cam toggle_cam_2"
+alias "toggle_cam_2" "cam_command 2; alias toggle_cam toggle_cam_1"
+alias "toggle_cam" "toggle_cam_1"
+
+// Clear smokes aliases
+alias "clear_smokes" "record record.record; ent_fire smokegrenade_projectile kill; stop"
+alias "+alt" "bind X clear_smokes"
+alias "-alt" "bind X +jumpthrow"
+
+// Buy aliases
+alias "buy_vest_helm" "give item_assaultsuit"
+alias "buy_vest_only" "give item_kevlar"
+alias "buy_defuser" "give item_defuser; give weapon_c4"
+alias "buy_flash" "give weapon_flashbang"
+alias "buy_smoke" "give weapon_smokegrenade"
+alias "buy_molotov" "give weapon_incgrenade; give weapon_molotov"
+alias "buy_hegrenade" "give weapon_hegrenade"
+
+// Buy binds
+bind "INS" "give weapon_elite"
+bind "DEL" "give weapon_mp5sd"
+bind "HOME" "give weapon_fiveseven; give weapon_tec9"
+bind "KP_END" "give weapon_ak47; give weapon_m4a1_silencer; give weapon_m4a1" // 1
+bind "KP_DOWNARROW" "give weapon_galilar; give weapon_famas" // 2
+bind "KP_PGDN" "give weapon_ump45" // 3
+bind "KP_LEFTARROW" "give weapon_awp" // 4
+bind "KP_5" "give weapon_ssg08" // 5
+bind "KP_RIGHTARROW" "give weapon_sg556; give weapon_aug" // 6
+bind "KP_HOME" "give weapon_mac10; give weapon_mp9" // 7
+bind "KP_UPARROW" "give weapon_p90" // 8
+bind "KP_PGUP" "give weapon_negev" // 9
+bind "KP_INS" "buy_defuser" // 0
+bind "KP_DEL" "give weapon_taser" // Dot
+bind "KP_ENTER" "buy_vest_helm" // Enter
+bind "KP_MULTIPLY" "give weapon_mag7; give weapon_sawedoff" // Asterisk
+bind "KP_SLASH" "give weapon_xm1014" // Slash
 
 // Binds
-bind "F1" "togglenoclip"
+bind "SHIFT" "+speed"
+bind "CTRL" "+duck"
+bind "ALT" "+alt"
+bind "F1" "toggle_noclip"
 bind "F2" "bot_place"
 bind "F3" "toggle bot_crouch"
 bind "F4" "toggle bot_mimic"
-bind "F5" "mp_restartgame 1"
-bind "F6" "save_position"
-bind "F7" "load_position"
-bind "F8" "toggle host_timescale 5 1"
+bind "F5" "sv_rethrow_last_grenade"
+bind "F6" "toggle_cam"
+bind "F7" "toggle r_drawothermodels 2 1"
+bind "F8" "mp_restartgame 1"
 unbind "F9"
 unbind "F10"
-bind "F11" "togglecam"
-bind "F12" "toggle r_drawothermodels 2 1"
+unbind "F11"
+unbind "F12"
+bind "I" "exec knife"
+bind "F" "+lookatweapon; r_cleardecals"
+bind "H" "load_position"
+bind "J" "save_position"
+bind "K" "+fastforward"
+bind "N" "toggle_tp"
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
-bind "/" "bot_add"
+bind "/" "bot_kick; god"
 
 // Bots
 gods
@@ -48,8 +101,10 @@ bot_quota "15"
 bot_stop "1"
 bot_dont_shoot "1"
 bot_knives_only
-// bot_difficulty "expert"
-// mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3" // ?
+bot_chatter "off"
+bot_allow_rogues "1"
+bot_difficulty "3"
+mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3"
 mp_solid_teammates "1"
 mp_free_armor "2"
 mp_max_armor "2"
@@ -60,8 +115,6 @@ mp_limitteams "0"
 // Times & Conditions
 mp_warmuptime "1"
 mp_freezetime "1"
-mp_respawntime "1"
-mp_bonusroundtime "1"
 mp_respawn_on_death_ct "1"
 mp_respawn_on_death_t "1"
 mp_round_restart_delay "1"
@@ -71,7 +124,10 @@ mp_roundtime "30"
 mp_roundtime_defuse "30"
 mp_roundtime_hostage "30"
 mp_endmatch_votenextmap "0"
+mp_drop_knife_enable "1"
 mp_ignore_round_win_conditions "1"
+mp_plant_c4_anywhere "1"
+mp_anyone_can_pickup_c4 "1"
 
 // Buy
 mp_buy_anywhere "1"
