--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -317,6 +317,10 @@ bind "3" "slot3; r_cleardecals"
 bind "4" "use weapon_hegrenade; r_cleardecals"
 bind "5" "use weapon_healthshot; use weapon_c4; r_cleardecals"
 bind "6" "use weapon_decoy; r_cleardecals"
+unbind "7"
+unbind "8"
+unbind "9"
+unbind "0"
 
 //// Movement keys
 bind "W" "+forward"
@@ -331,6 +335,9 @@ bind "R" "+reload"
 bind "T" "+spray_menu"
 bind "Y" "messagemode"
 bind "U" "messagemode2"
+unbind "I"
+bind "O" "+radialradio"
+bind "P" "callvote"
 bind "[" "invprev"
 bind "]" "invnext"
 bind "\" "buy_vest_helm; buy_defuser"
@@ -382,6 +389,7 @@ bind "KP_MINUS" "volume_down" // Minus
 ////
 // Misc
 ////
+gameinstructor_enable "0"
 net_graph "0"
 net_graphheight "128"
 net_graphholdsvframerate "0"
